fix: autocomplete + refactor parameter value

--- a/ui/src/app/shared/requirements/form/requirements.form.scss
+++ b/ui/src/app/shared/requirements/form/requirements.form.scss
@@ -4,15 +4,9 @@ nz-form-item {
   nz-select {
     width: 100%;
   }
+}
 
-  .container {
-    width: 100%;
-  }
-
-  input {
-    width: 100%;
-  }
-  textarea {
-    width: 100%;
-  }
+.content {
+  padding-left: 15px;
+  padding-right: 15px;
 }
